# mcguffinquest-rs

./: .gitignore  Cargo.toml  README.md
resources/: McGuffinQuest_80x50.xp  mcguffin_quest_80x50.xp
src/: components.rs  damage_system.rs  glyph_index.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  random_tables.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/colors/: db16.rs  db32.rs  mod.rs
src/map_builders/: bsp_dungeon.rs  bsp_interiors.rs  cellular_automata.rs  common.rs  mod.rs  simple_map.rs
