[package]
name = "mcguffinquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "http://github.com/amethyst/bracket-lib", rev = "851f6f08675444fb6fa088b9e67bee9fd75554c6", features = ["serde"] }
specs = {version = "0.18.0", features = ["serde"]}
specs-derive = "0.4.1"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
